--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 #label,
 #inpt {
     display: inline-flex;
-    background-color: lightslategray;
+    background-color: rgb(192, 192, 192);
     color: black;
     box-sizing: border-box;
     border-radius: 0.5em;
