--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
     color: lightseagreen;
 }
 
-#label,
-#inpt {
+.label,
+.inpt {
     display: inline-flex;
     background-color: rgb(192, 192, 192);
     color: black;
@@ -21,10 +21,15 @@
     padding: 5px;
 }
 
-#inpt {
+.inpt {
     text-align: center;
 }
 
-#inpt:focus {
+.inpt:focus {
     outline: none;
+}
+
+#house {
+    margin: 10px;
+    padding: 10px;
 }
